--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Личный проект «Кекстаграм» от HTML Academy",
   "repository": {
     "type": "git",
-    "url": "git@github.com:htmlacademy-univer-javascript-1/2623195-kekstagram-6.git"
+    "url": "git+ssh://git@github.com/htmlacademy-univer-javascript-1/2623195-kekstagram-6.git"
   },
   "bugs": {
     "url": "https://github.com/htmlacademy-univer-javascript-1/2623195-kekstagram-6/issues"
@@ -16,7 +16,6 @@
     "eslint-config-htmlacademy": "5.1.2"
   },
   "license": "MIT",
-  "dependencies": {},
   "scripts": {
     "start": "browser-sync start --server --no-ui --files \"js/**/*.js\"",
     "lint": "eslint js/"
@@ -24,5 +23,9 @@
   "engines": {
     "node": "16.x",
     "npm": "8.x"
-  }
+  },
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "homepage": "https://github.com/htmlacademy-univer-javascript-1/2623195-kekstagram-6#readme"
 }
